<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/rounded_border"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/storyImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="8dp"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_background"/>

    <TextView
        android:id="@+id/captionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pinImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pin_message"
            android:src="@drawable/outline_push_pin_24" />

        <ImageView
            android:id="@+id/likeImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="8dp"
            android:contentDescription="@string/like_message"
            android:src="@drawable/baseline_thumb_up_off_alt_24" />

        <TextView
            android:id="@+id/likeCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>